# openapi/restapi/operations/wash_servers/delete.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-
-	"sbp/internal/logic/entities"
-)
-
-// DeleteHandlerFunc turns a function with the right signature into a delete handler
-type DeleteHandlerFunc func(DeleteParams, *entities.Auth) DeleteResponder
-
-// Handle executing the request and returning a response
-func (fn DeleteHandlerFunc) Handle(params DeleteParams, principal *entities.Auth) DeleteResponder {
-	return fn(params, principal)
-}
-
-// DeleteHandler interface for that can handle valid delete params
-type DeleteHandler interface {
-	Handle(DeleteParams, *entities.Auth) DeleteResponder
-}
-
-// NewDelete creates a new http.Handler for the delete operation
-func NewDelete(ctx *middleware.Context, handler DeleteHandler) *Delete {
-	return &Delete{Context: ctx, Handler: handler}
-}
-
-/*
-	Delete swagger:route DELETE /wash-server/ wash_servers delete
-
-Delete delete API
-*/
-type Delete struct {
-	Context *middleware.Context
-	Handler DeleteHandler
-}
-
-func (o *Delete) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewDeleteParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal *entities.Auth
-	if uprinc != nil {
-		principal = uprinc.(*entities.Auth) // this is really a entities.Auth, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
