# openapi/restapi/operations/wash_servers/delete_parameters.go
@@ -1,76 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/runtime"
-	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/validate"
-
-	"sbp/openapi/models"
-)
-
-// NewDeleteParams creates a new DeleteParams object
-//
-// There are no default values defined in the spec.
-func NewDeleteParams() DeleteParams {
-
-	return DeleteParams{}
-}
-
-// DeleteParams contains all the bound params for the delete operation
-// typically these are obtained from a http.Request
-//
-// swagger:parameters delete
-type DeleteParams struct {
-
-	// HTTP Request Object
-	HTTPRequest *http.Request `json:"-"`
-
-	/*
-	  In: body
-	*/
-	Body *models.WashServerDelete
-}
-
-// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
-// for simple values it will use straight method calls.
-//
-// To ensure default values, the struct must have been initialized with NewDeleteParams() beforehand.
-func (o *DeleteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
-	var res []error
-
-	o.HTTPRequest = r
-
-	if runtime.HasBody(r) {
-		defer r.Body.Close()
-		var body models.WashServerDelete
-		if err := route.Consumer.Consume(r.Body, &body); err != nil {
-			res = append(res, errors.NewParseError("body", "body", "", err))
-		} else {
-			// validate body object
-			if err := body.Validate(route.Formats); err != nil {
-				res = append(res, err)
-			}
-
-			ctx := validate.WithOperationRequest(r.Context())
-			if err := body.ContextValidate(ctx, route.Formats); err != nil {
-				res = append(res, err)
-			}
-
-			if len(res) == 0 {
-				o.Body = &body
-			}
-		}
-	}
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
