# openapi/restapi/operations/wash_servers/get_wash_server.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-
-	"sbp/internal/logic/entities"
-)
-
-// GetWashServerHandlerFunc turns a function with the right signature into a get wash server handler
-type GetWashServerHandlerFunc func(GetWashServerParams, *entities.Auth) GetWashServerResponder
-
-// Handle executing the request and returning a response
-func (fn GetWashServerHandlerFunc) Handle(params GetWashServerParams, principal *entities.Auth) GetWashServerResponder {
-	return fn(params, principal)
-}
-
-// GetWashServerHandler interface for that can handle valid get wash server params
-type GetWashServerHandler interface {
-	Handle(GetWashServerParams, *entities.Auth) GetWashServerResponder
-}
-
-// NewGetWashServer creates a new http.Handler for the get wash server operation
-func NewGetWashServer(ctx *middleware.Context, handler GetWashServerHandler) *GetWashServer {
-	return &GetWashServer{Context: ctx, Handler: handler}
-}
-
-/*
-	GetWashServer swagger:route GET /wash-server/{id} wash_servers getWashServer
-
-GetWashServer get wash server API
-*/
-type GetWashServer struct {
-	Context *middleware.Context
-	Handler GetWashServerHandler
-}
-
-func (o *GetWashServer) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewGetWashServerParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal *entities.Auth
-	if uprinc != nil {
-		principal = uprinc.(*entities.Auth) // this is really a entities.Auth, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
