# openapi/restapi/operations/wash_servers/list.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-
-	"sbp/internal/logic/entities"
-)
-
-// ListHandlerFunc turns a function with the right signature into a list handler
-type ListHandlerFunc func(ListParams, *entities.Auth) ListResponder
-
-// Handle executing the request and returning a response
-func (fn ListHandlerFunc) Handle(params ListParams, principal *entities.Auth) ListResponder {
-	return fn(params, principal)
-}
-
-// ListHandler interface for that can handle valid list params
-type ListHandler interface {
-	Handle(ListParams, *entities.Auth) ListResponder
-}
-
-// NewList creates a new http.Handler for the list operation
-func NewList(ctx *middleware.Context, handler ListHandler) *List {
-	return &List{Context: ctx, Handler: handler}
-}
-
-/*
-	List swagger:route GET /wash-server/list wash_servers list
-
-List list API
-*/
-type List struct {
-	Context *middleware.Context
-	Handler ListHandler
-}
-
-func (o *List) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewListParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal *entities.Auth
-	if uprinc != nil {
-		principal = uprinc.(*entities.Auth) // this is really a entities.Auth, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
