# openapi/restapi/operations/wash_servers/notification.go
@@ -1,71 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package wash_servers
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-
-	"sbp/internal/logic/entities"
-)
-
-// NotificationHandlerFunc turns a function with the right signature into a notification handler
-type NotificationHandlerFunc func(NotificationParams, *entities.Auth) NotificationResponder
-
-// Handle executing the request and returning a response
-func (fn NotificationHandlerFunc) Handle(params NotificationParams, principal *entities.Auth) NotificationResponder {
-	return fn(params, principal)
-}
-
-// NotificationHandler interface for that can handle valid notification params
-type NotificationHandler interface {
-	Handle(NotificationParams, *entities.Auth) NotificationResponder
-}
-
-// NewNotification creates a new http.Handler for the notification operation
-func NewNotification(ctx *middleware.Context, handler NotificationHandler) *Notification {
-	return &Notification{Context: ctx, Handler: handler}
-}
-
-/*
-	Notification swagger:route POST /notification wash_servers notification
-
-Notification notification API
-*/
-type Notification struct {
-	Context *middleware.Context
-	Handler NotificationHandler
-}
-
-func (o *Notification) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewNotificationParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal *entities.Auth
-	if uprinc != nil {
-		principal = uprinc.(*entities.Auth) // this is really a entities.Auth, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
